// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin class component: code 1`] = `
"class ComponentClass extends Component {
  render() {
    return (
      <div
        __line={4}
        __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
      >
        <a>link</a>
        <SomeOtherComponent />
      </div>
    );
  }
}
"
`;

exports[`babel plugin closed element: code 1`] = `
"const x = (
  <a
    __line={1}
    __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
  >
    <div id=\\"Hello World!\\" />
  </a>
);
"
`;

exports[`babel plugin function component with early return: code 1`] = `
"function Component() {
  const [loading] = useState(true);

  if (loading) {
    return (
      <div
        __line={5}
        __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
      >
        <a>link</a>
        loading
      </div>
    );
  }

  return (
    <div
      __line={12}
      __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
    >
      <a>link</a>
      <SomeOtherComponent />
    </div>
  );
}
"
`;

exports[`babel plugin function component: code 1`] = `
"function Component() {
  return (
    <div
      __line={3}
      __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
    >
      <a>link</a>
      <SomeOtherComponent />
    </div>
  );
}
"
`;

exports[`babel plugin simple const jsx: code 1`] = `
"const x = (
  <a
    __line={1}
    __filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
  >
    <div id=\\"Hello World!\\"></div>
  </a>
);
"
`;
